# physics-nsu

./: README.md
difraction_grid/: CMakeLists.txt  evdokimova_diff_grid.cpp
difraction_grid/src/: evdokimova_diff_grid.cpp  grid
potential_hole/: CMakeLists.txt  evdokimova_potential_hole.cpp  evdokimova_solutions.cpp
potential_hole/src/: calculations.cpp  calculations.hpp  checkInput.cpp  checkInput.hpp  coefficient.cpp  coefficient.hpp  coefficients.hpp  consoleOutput.cpp  consoleOutput.hpp  drawingFigures.cpp  drawingFigures.hpp  drawingLevels.cpp  drawingLevels.hpp  drawingWaves.cpp  drawingWaves.hpp  evdokimova_levels.cpp  evdokimova_solutions.cpp  evdokimova_waves.cpp  generateValues.cpp  generateValues.hpp
wave_time/: CMakeLists.txt
wave_time/src/: constants.hpp  evdokimova_wave_equation.cpp
